turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: Unit does not take parameters
    case Color.black => setCouleurBrosse(Color.white);baisseBrosse();leveBrosse();gauche()();avance()
                                                                                          ^